--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
   "name": "xiao-koa-mysql",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "XiaoKoa快速开发系列之操作MySQL插件",
   "main": "./lib/index.js",
   "files": [
     "lib"
   ],
   "scripts": {
-    "build:lib": "node ./scripts/build.js"
+    "build:lib": "node ./scripts/build.js",
+    "prepublishOnly": "zx ./scripts/prepublish.mjs"
   },
   "keywords": [
     "xiao-koa",
     "xiao-koa-mysql",
     "xuanxiaoqian"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xuanxiaoqian/xiao-koa-mysql"
+  },
   "author": "xuanxiaoqian",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/xuanxiaoqian/xiao-koa-mysql/issues"
+  },
   "devDependencies": {
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.7.18",
     "esbuild": "^0.15.7",
     "typescript": "^4.8.4",
-    "zx": "^7.0.8"
-  },
-  "dependencies": {
+    "zx": "^7.0.8",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13"
   }
